<resources>
    <string name="app_name">LawyerApp</string>
    <string name="button_ok">Ok</string>
    <string name="button_next">Далее</string>
    <string name="change_user_phone_h1">Новый номер телефона</string>
    <string name="change_user_phone_p1">На этот номер будет отправлен код подтверждения</string>
    <string name="change_user_email_h1">Новая электронная почта</string>
    <string name="change_user_email_p1">На этот адрес будет отправлено письмо для подтверждения электронной почты</string>
    <string name="text_recovery_password">Укажите адрес электронной почты. Мы отправим на него новый пароль и инструкцию по смене, на всяки случай.</string>
    <string name="text_recovery_password_bottom">Востановить пароль</string>
    <string name="text_change_password_title">Требования к паролю:</string>
    <string name="text_change_password_bottom">Изменить пароль</string>
    <string name="text_change_password_hint1">Введите старый пароль</string>
    <string name="text_change_password_hint2">Введите новый пароль</string>
    <string name="text_change_password_hint3">Повторите новый пароль</string>
    <string name="text_sign_in_check1">На ваш адрес электронной почты отправлено письмо.</string>
    <string name="text_sign_in_check2">Пожалуйста, перейдите по указанной в письме ссылке, чтобы активировать вашу учетную запись.</string>
    <string name="text_sign_in_check3">Обязательно проверьте папку «СПАМ», если письмо подтверждения не приходит длительное время.</string>
    <string name="login_checkbox">Запомнить меня</string>
    <string name="register_checkbox">Я принимаю условия Пользовательского соглашения и условия Политики конфиденциальности.</string>
    <string name="introductory_text">Судный день</string>
    <string name="ask_lawyer_question_h1">Насколько срочно вам необходим юрист?</string>
    <string name="ask_lawyer_question_p1">На основании вашего запроса мы определим подходящего вам юриста</string>
    <string name="ask_lawyer_question_ch1">В течении часа</string>
    <string name="ask_lawyer_question_ch2">В течение дня</string>
    <string name="ask_lawyer_question_ch3">В течение несколько дней</string>
    <string name="main_screen_welcome">Мы - ваш онлайн-юрист</string>
    <string name="main_screen_txt1">У нас вы сможете получить лучшую консультацию юристов онлайн из любой точки мира.</string>
    <string name="main_screen_txt2">Задайте вопрос прямо сейчас, и его увидят множество профессионалов со всей России.</string>
    <string name="main_screen_btn1">Задать вопрос юристам</string>
    <string name="main_screen_btn2">Поиск по ситуации</string>
    <string name="login_forgot_password">Забыли пароль?</string>
    <string name="registration_text">Регистрация</string>
    <string name="registration_user_role">Пользователь</string>
    <string name="registration_email">Email</string>
    <string name="registration_passport_data">Паспортные данные</string>
    <string name="registration_passport_data_ext">Также прикрепите сканы первого разворота и страницы с регистрацией</string>
    <string name="registration_diplom_data">Диплом о высшем образовании</string>
    <string name="registration_diplom_data_ext">Также прикрепите сканы дипломов</string>
    <string name="registration_phone">Телефон</string>
    <string name="registration_phone_code">Код</string>
    <string name="registration_name">Имя</string>
    <string name="registration_ser_name">Фамилия</string>
    <string name="registration_last_name">Отчество</string>
    <string name="registration_password">Пароль</string>
    <string name="registration_repeat_password">Повторите пароль</string>
    <string name="registration_user_picture">Загрузить аватар</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="enter_button">Войти</string>
    <string name="registration_enter_account">Войти в аккуаунт</string>
    <string name="registration_terms_of_use">Нажимая кнопку “Зарегистрироваться”, я принимаю условия Пользовательского соглашения и условия Политики конфиденциальности.</string>
    <string name="registration_choose_image">Загрузить аватар.</string>
    <string name="title_onboarding_1">Начать.</string>
    <string name="title_onboarding_2">Инструкция на все случаи жизни.</string>
    <string name="title_onboarding_3">Вопросы юристу.</string>
    <string name="description_onboarding_1">Наше приложение поможет найти решение юридических вопросов любой степени сложности. Вам не нужно тратить время на поход к юристу, все ответы вы найдете в нашем приложени.</string>
    <string name="description_onboarding_2">Не знаете, как вернуть некачественный тьовар? Что писать в договоре аренды? Когда подавать декларацию? Выберите подходящую ситуацию, и мы подберем для вас решение!</string>
    <string name="description_onboarding_3">Если у вас есть вопрос, на который вы не смогли получить ответ в инструкциях, то задайте его нашему юристу напрямую в чате.</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="bottom_nav_main">Главная</string>
    <string name="bottom_nav_services">Услуги</string>
    <string name="bottom_nav_my_work">Мои дела</string>
    <string name="bottom_nav_profile">Профиль</string>
    <string name="text_send">Повторить отправку</string>
    <string name="bottom_send">Отправить</string>
</resources>