<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_balance_24"
        android:title="@string/bottom_nav_main"  />
    <item
        android:id="@+id/services"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/bottom_nav_services" />
    <item
        android:id="@+id/my_work"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/bottom_nav_my_work" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_perm_identity_24"
        android:title="@string/bottom_nav_profile" />
</menu>