<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".presentation.fragments.LoginFragment">
    <TextView
        android:id="@+id/ask_lawyer_question_h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="28sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/ask_lawyer_question_h1" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toTopOf="@id/ask_lawyer_question_p1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ask_lawyer_question_h1">
        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ask_lawyer_question_ch1"/>
        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ask_lawyer_question_ch2"/>
        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ask_lawyer_question_ch3"/>
    </RadioGroup>

    <TextView
        android:id="@+id/ask_lawyer_question_p1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:layout_marginTop="42dp"
        android:textFontWeight="500"
        android:lineHeight="24dp"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@id/ask_lawyer_question_p1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        android:text="@string/ask_lawyer_question_p1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_describe_your_situation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ask_lawyer_question_p1"
        app:layout_constraintVertical_chainStyle="packed"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_describe_your_situation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_repeat_password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:text=""
            />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_describe_your_situation"
        android:src="@drawable/ic_baseline_attachment_24"
        android:layout_marginTop="12dp"
        />

    <TextView
        android:id="@+id/imageChoose"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:textSize="14dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:layout_marginLeft="35dp"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/til_describe_your_situation"
        android:text="@string/registration_choose_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/questions"
        android:layout_marginTop="25dp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:background="@color/color_primary"
        android:text="@string/bottom_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageChoose"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>