<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".presentation.fragments.LoginFragment">
    <TextView
        android:id="@+id/mainTextWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="28sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/color_primary"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@id/text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/main_screen_welcome" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@id/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTextWelcome"
        android:text="@string/main_screen_txt1" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@id/questions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        android:text="@string/main_screen_txt2" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/questions"
        android:layout_marginTop="25dp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:background="@color/teal_200"
        android:text="@string/main_screen_btn1"
        app:layout_constraintBottom_toTopOf="@id/search_situation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/search_situation"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:textStyle="normal"
        android:textAllCaps="false"
        app:icon="@drawable/ic_baseline_search_24"
        app:iconTint="@color/black"
        app:strokeColor="@color/border_gray"
        android:textAlignment="center"
        app:iconGravity="textStart"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/main_screen_btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questions"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>