<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".presentation.fragments.SignInFragment"
        >

        <TextView
            android:id="@+id/textRegistration"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:layout_weight="1"
            android:textSize="24dp"
            android:textColor="@color/color_primary"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@id/til_role"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/registration_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_role"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/til_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/registration_user_role"
            app:layout_constraintTop_toTopOf="@id/textRegistration"
            app:layout_constraintVertical_chainStyle="packed"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

            >

            <AutoCompleteTextView
                android:id="@+id/et_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/til_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_role"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_email"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toTopOf="@id/til_lastname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:layout_constraintVertical_chainStyle="packed"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_name"
                android:inputType="textCapWords"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_lastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toTopOf="@id/til_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_name"
            app:layout_constraintVertical_chainStyle="packed"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_last_name"
                android:inputType="textCapWords"
                android:text=""
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toTopOf="@id/til_repeat_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_lastname"
            app:layout_constraintVertical_chainStyle="packed"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:text=""
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_repeat_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toTopOf="@id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            app:layout_constraintVertical_chainStyle="packed"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_repeat_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:text=""
                />
        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_repeat_password"
            android:src="@drawable/attachmenticon"
            android:layout_marginTop="6dp"
            />

        <TextView
            android:id="@+id/imageChoose"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:textSize="14dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/black"
           android:layout_marginLeft="35dp"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/til_repeat_password"
            android:text="@string/registration_choose_image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:background="@color/color_primary"
            android:text="@string/registration_button"
            app:layout_constraintBottom_toTopOf="@id/textTermsOfUse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageChoose"
            />
        <TextView
            android:id="@+id/textTermsOfUse"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="10dp"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@id/textEnterAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_button"
            android:text="@string/registration_terms_of_use" />
        <TextView
            android:id="@+id/textEnterAccount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textColor="@color/color_primary"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/registration_enter_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>