<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".presentation.fragments.LoginFragment">

        <TextView
            android:id="@+id/textChangeEmailH1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_button"
            android:text="@string/change_user_email_h1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@id/textChangeEmailP1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textChangeEmailH1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_phone"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textChangeEmailP1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@id/enter_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            android:text="@string/change_user_phone_p1" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/enter_button"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:backgroundTint="@color/color_primary"
            android:text="@string/bottom_send"
            app:layout_constraintBottom_toTopOf="@id/textRecoveryPasswordLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textChangeEmailP1"
            />
        <TextView
            android:id="@+id/textRecoveryPasswordLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dp"
            android:layout_marginTop="25dp"
            android:textColor="@color/color_primary"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_button"
            android:text="@string/text_send" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>